# trekCkr

./: CMakeLists.txt
cmake/modules/: FindCLHEP.cmake  FindFTGL.cmake  FindGENFIT.cmake  FindROOT.cmake  downloader.cmake
include/: MCGenPlugin.h  MIDASreader.h  Plugin.h  RecipeReader.h  chef.h  cookerrawtree.h  csitree.h  generatortree.h  marinateCsI.h  mn2CsIfn.h  multiTree.h  slowctrl.h
init/: csiCluster.xml  test.xml  trekAll.xml
recipe/: copy.xml  demo.xml
recipe/CsI/: clusMarinate.xml  clusterFind.xml  marinate.xml  test.xml
src/: CMakeLists.txt
src/Chef/: CMakeLists.txt
src/Chef/src/: chef.cpp
src/InitReader/: CMakeLists.txt
src/InitReader/src/: InitReader.cpp
src/Plugin/: CMakeLists.txt
src/Plugin/src/: Plugin.cpp
src/RecipeReader/src/: RecipeReader.cpp
src/Reconstruction/: CMakeLists.txt
src/SlowCtrl/: CMakeLists.txt
src/SlowCtrl/src/: slowctrl.cpp
src/SlowCtrl/src/include/: LinkDef.hh
src/alacarte/: CMakeLists.txt
src/alacarte/src/: alacarte.cpp  checkpivotmodel.cpp  mainwindow.cpp
src/alacarte/src/include/: checkpivotmodel.h  mainwindow.h
src/combine/: CMakeLists.txt
src/combine/src/: combine.cpp
src/cooker/: CMakeLists.txt
src/cooker/src/: cooker.cpp
src/gdml/: CMakeLists.txt  README  bashscript
src/gdml/gdml_files/: muse_v1.gdml
src/gdml/gdml_files/schema/: gdml_materials_olympus.xsd  gdml_olympus.xsd
src/gdml/human_readable/: materials.txt  positions_10cm_out.txt  positions_20cm_out.txt  positions_nominal.txt  positions_survey1.txt  positions_survey2.txt  rotations_nominal.txt  rotations_survey1.txt  rotations_survey2.txt  solids1.txt  solids2.txt  volumes1.txt  volumes1_WC_cells.txt  volumes2.txt  volumes2_WC_cells.txt  volumes_big_fitting.txt  volumes_fitting.txt
src/gdml/python_gdml_generator/: gdmlModule.py  generateGDML.py  olympusWriter.py
src/plugins/: CMakeLists.txt
src/plugins/analysis/: CMakeLists.txt
src/plugins/analysis/SlowCtrlDemo/: CMakeLists.txt
src/plugins/analysis/SlowCtrlDemo/src/: SlowCtrlDemo.cpp
src/plugins/analysis/SlowCtrlDemo/src/include/: LinkDef.hh  SlowCtrlDemo.h
src/plugins/analysis/covfefe/: CMakeLists.txt
src/plugins/analysis/covfefe/init/: covfefe.xml
src/plugins/analysis/covfefe/src/: boostCM.cpp  clusterAna.cpp  covfefe.cpp  evalClusters.cpp
src/plugins/analysis/covfefe/src/include/: LinkDef.hh  boostCM.h  covfefe.h  evalClusters.h
src/plugins/analysis/stt_analysis/: CMakeLists.txt
src/plugins/analysis/stt_analysis/init/: stt_analysis.xml
src/plugins/analysis/stt_analysis/src/: stt_analysis.cpp
src/plugins/analysis/stt_analysis/src/include/: LinkDef.hh  stt_analysis.h
src/plugins/detector/: CMakeLists.txt
src/plugins/detector/CsI/: CMakeLists.txt
src/plugins/detector/CsI/cluster/: CMakeLists.txt
src/plugins/detector/CsI/cluster/init/: ClusterCsI.xml  ClusterCsI.xml.original  ClusterCsI.xsd  fitWave.xml
src/plugins/detector/CsI/cluster/src/: Det_ClusterCsI.cpp  calibPar.txt  clusterScore.cpp
src/plugins/detector/CsI/cluster/src/include/: Det_ClusterCsI.h  LinkDef.hh  clusterScore.h
src/plugins/detector/CsI/init/: CsI.xml
src/plugins/detector/CsI/singleHit/: CMakeLists.txt
src/plugins/detector/CsI/singleHit/init/: fitWave.xsd
src/plugins/detector/CsI/singleHit/src/: Det_CsI.cpp
src/plugins/detector/CsI/singleHit/src/include/: Det_CsI.h  LinkDef.hh
src/plugins/detector/CsI/src/: Det_CsI.cpp  clus_CsI.cpp
src/plugins/detector/CsI/src/include/: Det_CsI.h  clus_var.h
src/plugins/example/: CMakeLists.in  init.sh
src/plugins/example/src/: Det_example.cpp
src/plugins/example/src/include/: Det_example.h
src/plugins/tools/Copy/: CMakeLists.txt
src/plugins/tools/Copy/init/: Copy.xml
src/plugins/tools/Macro/: CMakeLists.txt
src/plugins/tools/Macro/src/: Det_Macro.cpp
src/plugins/visualization/: CMakeLists.txt
src/plugins/visualization/EventDisplay/: CMakeLists.txt  README
src/plugins/visualization/EventDisplay/init/: EventDisplay.xml
src/plugins/visualization/EventDisplay/src/: Det_EventDisplay.cpp  viewcontrol.cpp
src/plugins/visualization/EventDisplay/src/include/: Det_EventDisplay.h  LinkDef.hh
src/tree/: CMakeLists.txt
src/tree/src/: cookerrawtree.cpp  csitree.cpp  marinateCsI.cpp  multiTree.cpp
src/tree/src/include/: LinkDef.hh
src/udpLog/src/: udpLog.cpp
src/visualcooker/: CMakeLists.txt
src/visualcooker/src/: controlwindow.cpp  visualcooker.cpp
src/visualcooker/src/include/: controlwindow.h
